--- a/index.html
+++ b/index.html
@@ -3,299 +3,235 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ÉterFlor - Flores Eternas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* Estilos globales */
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #f2f2f2;
             margin: 0;
             padding: 0;
-            background-color: #1a1a1a; /* Fondo oscuro */
-            color: #d4af37; /* Dorado elegante */
         }
 
-        h1, h2, h3, p {
-            color: #d4af37; /* Dorado elegante */
-        }
-
-        /* Sección del encabezado */
         header {
-            background-color: #333333; /* Fondo oscuro */
-            padding: 20px;
+            background-color: #000000;
+            padding: 20px 0;
             text-align: center;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
             color: #d4af37;
+            font-size: 2.5rem;
+            font-weight: bold;
+            letter-spacing: 1px;
         }
 
-        header p {
-            font-size: 1.2rem;
-        }
-
-        /* Estilo de la barra de navegación */
-        nav {
-            background-color: #222222; /* Fondo oscuro para la barra de navegación */
-            padding: 10px;
-        }
-
-        nav a {
-            color: #d4af37; /* Texto dorado */
-            margin: 0 20px;
-            text-decoration: none;
-            font-size: 1.2rem;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #b68d29; /* Color dorado oscuro al pasar el mouse */
-        }
-
-        /* Sección de flores */
-        .flowers-section {
-            background-color: #444444; /* Fondo gris oscuro */
-            padding: 50px 0;
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .flower-card {
-            background-color: #555555; /* Fondo oscuro para tarjetas */
-            color: #d4af37; /* Texto dorado */
-            border: 2px solid #d4af37;
-            border-radius: 10px;
-            padding: 20px;
-            margin: 20px;
-            display: inline-block;
-            width: calc(20% - 40px);
-            box-sizing: border-box;
-            transition: transform 0.3s ease;
-        }
-
-        .flower-card:hover {
-            transform: scale(1.05); /* Efecto sutil de hover */
-        }
-
-        .flower-image {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .flower-title {
-            font-size: 1.5rem;
-            margin-top: 15px;
-        }
-
-        .flower-price {
-            font-size: 1.2rem;
-            margin-top: 10px;
-        }
-
-        /* Carrusel de flores */
-        .carousel-item {
+        .carousel {
             display: flex;
-            justify-content: center;
+            overflow: hidden;
+            margin: 20px;
         }
 
         .carousel-inner {
             display: flex;
-            justify-content: center;
+            transition: transform 0.5s ease;
+        }
+
+        .carousel-item {
+            min-width: 33%;
+            margin: 0 10px;
+            background-color: #2c2c2c;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
         .carousel-item img {
-            max-width: 100%;
-            max-height: 300px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Sección de contacto */
-        .contact-section {
-            background-color: #333333; /* Fondo oscuro */
-            padding: 50px 0;
-            text-align: center;
-        }
-
-        .contact-form input, .contact-form textarea {
-            background-color: #555555; /* Fondo oscuro */
-            color: #d4af37; /* Texto dorado */
-            border: 1px solid #d4af37;
-            padding: 10px;
-            margin: 10px;
-            width: 80%;
+            width: 100%;
             border-radius: 5px;
         }
 
-        .contact-form button {
-            background-color: #d4af37; /* Botón dorado */
-            color: #333333; /* Texto oscuro */
-            border: none;
-            padding: 10px 20px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+        .carousel-item h3 {
+            margin-top: 15px;
+            font-size: 1.5rem;
+            color: #d4af37;
         }
 
-        .contact-form button:hover {
-            background-color: #b68d29; /* Efecto hover del botón */
-        }
-
-        /* Sección de rifa */
-        .raffle-section {
-            background-color: #444444; /* Fondo gris oscuro */
-            padding: 50px 0;
-            text-align: center;
-        }
-
-        .raffle-button {
-            background-color: #d4af37; /* Botón dorado */
-            color: #333333; /* Texto oscuro */
-            border: none;
-            padding: 10px 20px;
-            font-size: 1.2rem;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .raffle-button:hover {
-            background-color: #b68d29; /* Efecto hover */
-        }
-
-        /* Estilos para el footer */
-        footer {
-            background-color: #333333; /* Fondo oscuro */
-            color: #d4af37; /* Texto dorado */
-            padding: 30px 0;
-            text-align: center;
+        .carousel-item p {
+            color: #b3b3b3;
             font-size: 1rem;
         }
 
-        footer a {
-            color: #d4af37; /* Texto dorado para enlaces */
+        .section-title {
+            font-size: 2rem;
+            text-align: center;
+            color: #d4af37;
+            margin-top: 40px;
+            letter-spacing: 1px;
+        }
+
+        .section-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 30px 0;
+        }
+
+        .section-box {
+            background-color: #333333;
+            width: 30%;
+            margin: 10px;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            color: #f2f2f2;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .section-box h4 {
+            font-size: 1.5rem;
+            color: #d4af37;
+            margin-bottom: 15px;
+        }
+
+        .section-box p {
+            font-size: 1rem;
+            color: #b3b3b3;
+        }
+
+        .footer {
+            background-color: #000000;
+            color: #d4af37;
+            text-align: center;
+            padding: 20px;
+            font-size: 1rem;
+        }
+
+        .btn {
+            background-color: #d4af37;
+            color: #1a1a1a;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
             text-decoration: none;
+            font-size: 1.1rem;
+            letter-spacing: 0.5px;
         }
 
-        footer a:hover {
-            color: #b68d29; /* Efecto hover */
+        .btn:hover {
+            background-color: #b38a00;
         }
 
-        /* Estilo responsivo */
-        @media (max-width: 768px) {
-            .flower-card {
-                width: calc(50% - 40px); /* Ajustar a 50% en pantallas pequeñas */
-            }
+        /* Carrusel Controls */
+        .carousel-control {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
         }
 
-        @media (max-width: 576px) {
-            .flower-card {
-                width: calc(100% - 40px); /* Ajustar a 100% en pantallas muy pequeñas */
-            }
+        .carousel-control button {
+            background-color: #d4af37;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            color: #1a1a1a;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+
+        .carousel-control button:hover {
+            background-color: #b38a00;
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>Bienvenidos a ÉterFlor</h1>
-        <p>Flores Eternas con un toque de elegancia.</p>
-    </header>
+<header>
+    ÉterFlor - Flores Eternas
+</header>
 
-    <!-- Barra de navegación -->
-    <nav>
-        <a href="#flores">Flores</a>
-        <a href="#contacto">Contacto</a>
-        <a href="#rifa">Rifa</a>
-    </nav>
-
-    <!-- Carrusel de flores -->
-    <section class="flowers-section" id="flores">
-        <h2>Flores Eternas</h2>
-        <div id="flowerCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://via.placeholder.com/600x300" class="d-block w-100" alt="Ramo de Rosas Doradas">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/600x300" class="d-block w-100" alt="Ramo de Lirios Plateados">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/600x300" class="d-block w-100" alt="Ramo de Orquídeas">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/600x300" class="d-block w-100" alt="Ramo de Tulipanes">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/600x300" class="d-block w-100" alt="Ramo de Margaritas Doradas">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#flowerCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#flowerCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+<div class="section-title">Nuestras Flores Eternas</div>
+<div class="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item">
+            <img src="https://via.placeholder.com/300x200" alt="Flor 1">
+            <h3>Rosa Dorada</h3>
+            <p>Una flor de eterna elegancia, símbolo de amor y devoción, con un toque de lujo en cada pétalo.</p>
         </div>
-    </section>
-
-    <section class="flowers-section">
-        <h3>Ramos Especiales</h3>
-        <div class="flower-card">
-            <img src="https://via.placeholder.com/300" alt="Ramo de flores" class="flower-image">
-            <h3 class="flower-title">Ramo de Rosas Doradas</h3>
-            <p class="flower-price">S/ 50.00</p>
+        <div class="carousel-item">
+            <img src="https://via.placeholder.com/300x200" alt="Flor 2">
+            <h3>Orquídea Real</h3>
+            <p>La orquídea que nunca se marchita, con un misterio único que guarda en su forma y colores.</p>
         </div>
-        <div class="flower-card">
-            <img src="https://via.placeholder.com/300" alt="Ramo de flores" class="flower-image">
-            <h3 class="flower-title">Ramo de Lirios Plateados</h3>
-            <p class="flower-price">S/ 45.00</p>
+        <div class="carousel-item">
+            <img src="https://via.placeholder.com/300x200" alt="Flor 3">
+            <h3>Lirio Místico</h3>
+            <p>El lirio, con su fragancia eterna, capaz de traer paz y serenidad a cualquier ambiente.</p>
         </div>
-        <div class="flower-card">
-            <img src="https://via.placeholder.com/300" alt="Ramo de flores" class="flower-image">
-            <h3 class="flower-title">Ramo de Orquídeas</h3>
-            <p class="flower-price">S/ 70.00</p>
-        </div>
-        <div class="flower-card">
-            <img src="https://via.placeholder.com/300" alt="Ramo de flores" class="flower-image">
-            <h3 class="flower-title">Ramo de Tulipanes</h3>
-            <p class="flower-price">S/ 60.00</p>
-        </div>
-        <div class="flower-card">
-            <img src="https://via.placeholder.com/300" alt="Ramo de flores" class="flower-image">
-            <h3 class="flower-title">Ramo de Margaritas Doradas</h3>
-            <p class="flower-price">S/ 40.00</p>
-        </div>
-    </section>
+    </div>
+</div>
+<div class="carousel-control">
+    <button onclick="prevSlide()">&#10094; Anterior</button>
+    <button onclick="nextSlide()">Siguiente &#10095;</button>
+</div>
 
-    <section class="contact-section" id="contacto">
-        <h2>Contáctanos</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Tu nombre" required>
-            <input type="email" placeholder="Tu correo" required>
-            <textarea placeholder="Mensaje" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
-    </section>
+<div class="section-title">Nuestros Libros</div>
+<div class="section-container">
+    <div class="section-box">
+        <h4>Libro 1: El Legado Dorado</h4>
+        <p>Un libro que captura la esencia de la elegancia eterna, explorando los misterios de lo desconocido.</p>
+    </div>
+    <div class="section-box">
+        <h4>Libro 2: La Magia del Tiempo</h4>
+        <p>En este libro, se desvela el poder secreto del tiempo y cómo podemos controlarlo a nuestro favor.</p>
+    </div>
+    <div class="section-box">
+        <h4>Libro 3: La Flor del Alma</h4>
+        <p>Un viaje literario que explora los secretos más profundos del alma humana y su conexión con la naturaleza.</p>
+    </div>
+    <div class="section-box">
+        <h4>Libro 4: Ecos de Eternidad</h4>
+        <p>Sumérgete en una historia de amor, magia y destinos entrelazados que perduran más allá de la muerte.</p>
+    </div>
+    <div class="section-box">
+        <h4>Libro 5: Sendero Dorado</h4>
+        <p>Una guía de vida que te llevará por un camino lleno de sabiduría, belleza y misterio.</p>
+    </div>
+</div>
 
-    <section class="raffle-section" id="rifa">
-        <h2>¡Participa en nuestra Rifa!</h2>
-        <p>¡Puedes ganar un ramo de flores eternas! Compra tu boleto aquí:</p>
-        <button class="raffle-button">Comprar Boleto</button>
-    </section>
+<div class="footer">
+    <p>&copy; 2025 ÉterFlor. Todos los derechos reservados. <a href="mailto:contacto@eterflor.com" class="btn">Contáctanos</a></p>
+</div>
 
-    <footer>
-        <p>© 2025 ÉterFlor. Todos los derechos reservados.</p>
-        <p><a href="#">Política de privacidad</a> | <a href="#">Términos y condiciones</a></p>
-    </footer>
+<script>
+    let currentIndex = 0;
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    function prevSlide() {
+        const slides = document.querySelectorAll('.carousel-item');
+        if (currentIndex > 0) {
+            currentIndex--;
+        } else {
+            currentIndex = slides.length - 1;
+        }
+        updateCarousel();
+    }
+
+    function nextSlide() {
+        const slides = document.querySelectorAll('.carousel-item');
+        if (currentIndex < slides.length - 1) {
+            currentIndex++;
+        } else {
+            currentIndex = 0;
+        }
+        updateCarousel();
+    }
+
+    function updateCarousel() {
+        const slides = document.querySelector('.carousel-inner');
+        const slideWidth = document.querySelector('.carousel-item').offsetWidth;
+        slides.style.transform = `translateX(-${currentIndex * (slideWidth + 20)}px)`;
+    }
+</script>
+
 </body>
 </html>
