--- a/index.html
+++ b/index.html
@@ -3,235 +3,246 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÉterFlor - Flores Eternas</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <title>ÉterFlor</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Incluyendo Swiper para los carruseles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: #f2f2f2;
+            background-color: #2b2b2b;
+            color: #fff;
             margin: 0;
             padding: 0;
         }
-
+        /* Encabezado */
         header {
-            background-color: #000000;
-            padding: 20px 0;
-            text-align: center;
-            color: #d4af37;
-            font-size: 2.5rem;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
-
-        .carousel {
-            display: flex;
-            overflow: hidden;
-            margin: 20px;
-        }
-
-        .carousel-inner {
-            display: flex;
-            transition: transform 0.5s ease;
-        }
-
-        .carousel-item {
-            min-width: 33%;
-            margin: 0 10px;
-            background-color: #2c2c2c;
-            border-radius: 10px;
+            background-color: #000;
             padding: 20px;
             text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
-
-        .carousel-item img {
-            width: 100%;
-            border-radius: 5px;
+        header h1 {
+            font-size: 3em;
+            color: #FFD700; /* Dorado elegante */
+            margin: 0;
         }
-
-        .carousel-item h3 {
-            margin-top: 15px;
-            font-size: 1.5rem;
-            color: #d4af37;
-        }
-
-        .carousel-item p {
-            color: #b3b3b3;
-            font-size: 1rem;
-        }
-
-        .section-title {
-            font-size: 2rem;
-            text-align: center;
-            color: #d4af37;
-            margin-top: 40px;
-            letter-spacing: 1px;
-        }
-
-        .section-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin: 30px 0;
-        }
-
-        .section-box {
-            background-color: #333333;
-            width: 30%;
-            margin: 10px;
-            border-radius: 10px;
-            padding: 20px;
-            text-align: center;
-            color: #f2f2f2;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-        }
-
-        .section-box h4 {
-            font-size: 1.5rem;
-            color: #d4af37;
-            margin-bottom: 15px;
-        }
-
-        .section-box p {
-            font-size: 1rem;
-            color: #b3b3b3;
-        }
-
-        .footer {
-            background-color: #000000;
-            color: #d4af37;
-            text-align: center;
-            padding: 20px;
-            font-size: 1rem;
-        }
-
-        .btn {
-            background-color: #d4af37;
-            color: #1a1a1a;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
+        header nav a {
+            color: #fff;
+            margin: 0 15px;
             text-decoration: none;
-            font-size: 1.1rem;
-            letter-spacing: 0.5px;
+            font-size: 1.2em;
+        }
+        header nav a:hover {
+            text-decoration: underline;
         }
 
-        .btn:hover {
-            background-color: #b38a00;
+        /* Sección Flores Eternas */
+        .section {
+            padding: 40px 0;
+            background-color: #1e1e1e;
+            text-align: center;
         }
-
-        /* Carrusel Controls */
-        .carousel-control {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
+        .section-title {
+            font-size: 2.5em;
+            color: #FFD700; /* Dorado elegante */
+            margin-bottom: 20px;
         }
-
-        .carousel-control button {
-            background-color: #d4af37;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            color: #1a1a1a;
-            cursor: pointer;
-            font-size: 1rem;
+        .swiper-container {
+            width: 80%;
+            margin: auto;
         }
-
-        .carousel-control button:hover {
-            background-color: #b38a00;
+        .swiper-slide {
+            background-color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+            transition: all 0.3s ease;
+        }
+        .swiper-slide:hover {
+            transform: scale(1.05);
+        }
+        .card {
+            background-color: #444;
+            border-radius: 10px;
+            overflow: hidden;
+            color: #fff;
+            text-align: center;
+        }
+        .card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+        .card-content {
+            padding: 15px;
+        }
+        .card-title {
+            font-size: 1.5em;
+            color: #FFD700;
+            margin-bottom: 10px;
+        }
+        .card-description {
+            font-size: 1.2em;
+            color: #fff;
+            opacity: 0.8;
+        }
+        .swiper-button-next, .swiper-button-prev {
+            color: #FFD700;
         }
     </style>
 </head>
 <body>
 
+<!-- Encabezado -->
 <header>
-    ÉterFlor - Flores Eternas
+    <h1>ÉterFlor</h1>
+    <nav>
+        <a href="#flores">Flores Eternas</a>
+        <a href="#libros">Libros</a>
+        <a href="#contacto">Contacto</a>
+    </nav>
 </header>
 
-<div class="section-title">Nuestras Flores Eternas</div>
-<div class="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item">
-            <img src="https://via.placeholder.com/300x200" alt="Flor 1">
-            <h3>Rosa Dorada</h3>
-            <p>Una flor de eterna elegancia, símbolo de amor y devoción, con un toque de lujo en cada pétalo.</p>
+<!-- Sección de Flores Eternas -->
+<section id="flores" class="section">
+    <div class="container">
+        <h2 class="section-title">Flores Eternas</h2>
+        
+        <!-- Carrusel de Flores Eternas -->
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <!-- Flor 1 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor1.jpg" alt="Flor 1">
+                        <div class="card-content">
+                            <h3 class="card-title">Rosa Eterna Dorada</h3>
+                            <p class="card-description">La rosa dorada, símbolo de amor y valentía, que nunca pierde su esplendor.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Flor 2 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor2.jpg" alt="Flor 2">
+                        <div class="card-content">
+                            <h3 class="card-title">Lirio Blanco Inmortal</h3>
+                            <p class="card-description">El lirio blanco, símbolo de pureza y elegancia, que perdura en el tiempo sin desvanecerse.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Flor 3 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor3.jpg" alt="Flor 3">
+                        <div class="card-content">
+                            <h3 class="card-title">Tulipán Nocturno</h3>
+                            <p class="card-description">Este tulipán, con sus tonos oscuros, representa la belleza que nunca se apaga.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Flor 4 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor4.jpg" alt="Flor 4">
+                        <div class="card-content">
+                            <h3 class="card-title">Violeta Dorada</h3>
+                            <p class="card-description">La violeta dorada, un símbolo de resiliencia, que florece eternamente a pesar de la adversidad.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Flor 5 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor5.jpg" alt="Flor 5">
+                        <div class="card-content">
+                            <h3 class="card-title">Orquídea Azul Celestial</h3>
+                            <p class="card-description">La orquídea azul, un emblema de misterio y belleza que jamás pierde su esplendor celestial.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Flor 6 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <img src="images/flor6.jpg" alt="Flor 6">
+                        <div class="card-content">
+                            <h3 class="card-title">Camelia Plateada</h3>
+                            <p class="card-description">La camelia plateada, un símbolo de amor eterno, con su brillo inquebrantable.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Controles del Carrusel -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
-        <div class="carousel-item">
-            <img src="https://via.placeholder.com/300x200" alt="Flor 2">
-            <h3>Orquídea Real</h3>
-            <p>La orquídea que nunca se marchita, con un misterio único que guarda en su forma y colores.</p>
-        </div>
-        <div class="carousel-item">
-            <img src="https://via.placeholder.com/300x200" alt="Flor 3">
-            <h3>Lirio Místico</h3>
-            <p>El lirio, con su fragancia eterna, capaz de traer paz y serenidad a cualquier ambiente.</p>
-        </div>
     </div>
-</div>
-<div class="carousel-control">
-    <button onclick="prevSlide()">&#10094; Anterior</button>
-    <button onclick="nextSlide()">Siguiente &#10095;</button>
-</div>
+</section>
 
-<div class="section-title">Nuestros Libros</div>
-<div class="section-container">
-    <div class="section-box">
-        <h4>Libro 1: El Legado Dorado</h4>
-        <p>Un libro que captura la esencia de la elegancia eterna, explorando los misterios de lo desconocido.</p>
-    </div>
-    <div class="section-box">
-        <h4>Libro 2: La Magia del Tiempo</h4>
-        <p>En este libro, se desvela el poder secreto del tiempo y cómo podemos controlarlo a nuestro favor.</p>
-    </div>
-    <div class="section-box">
-        <h4>Libro 3: La Flor del Alma</h4>
-        <p>Un viaje literario que explora los secretos más profundos del alma humana y su conexión con la naturaleza.</p>
-    </div>
-    <div class="section-box">
-        <h4>Libro 4: Ecos de Eternidad</h4>
-        <p>Sumérgete en una historia de amor, magia y destinos entrelazados que perduran más allá de la muerte.</p>
-    </div>
-    <div class="section-box">
-        <h4>Libro 5: Sendero Dorado</h4>
-        <p>Una guía de vida que te llevará por un camino lleno de sabiduría, belleza y misterio.</p>
-    </div>
-</div>
-
-<div class="footer">
-    <p>&copy; 2025 ÉterFlor. Todos los derechos reservados. <a href="mailto:contacto@eterflor.com" class="btn">Contáctanos</a></p>
-</div>
-
+<!-- Librerías para Swiper -->
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script>
-    let currentIndex = 0;
-
-    function prevSlide() {
-        const slides = document.querySelectorAll('.carousel-item');
-        if (currentIndex > 0) {
-            currentIndex--;
-        } else {
-            currentIndex = slides.length - 1;
+    var swiper = new Swiper('.swiper-container', {
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev'
         }
-        updateCarousel();
-    }
-
-    function nextSlide() {
-        const slides = document.querySelectorAll('.carousel-item');
-        if (currentIndex < slides.length - 1) {
-            currentIndex++;
-        } else {
-            currentIndex = 0;
-        }
-        updateCarousel();
-    }
-
-    function updateCarousel() {
-        const slides = document.querySelector('.carousel-inner');
-        const slideWidth = document.querySelector('.carousel-item').offsetWidth;
-        slides.style.transform = `translateX(-${currentIndex * (slideWidth + 20)}px)`;
-    }
+    });
 </script>
+<!-- Sección de Libros -->
+<section id="libros" style="padding: 60px 0; background-color: #333; color: #fff;">
+    <div class="container">
+        <h2 style="text-align: center; font-size: 3rem; color: #d4af37;">Libros Épicos</h2>
+        <div class="swiper-container" style="margin-top: 30px;">
+            <div class="swiper-wrapper">
+                <!-- Recuadro 1 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">El Viaje de las Estrellas</h3>
+                    <p style="color: #ddd;">Una historia épica de exploración espacial donde los personajes enfrentan desafíos desconocidos, mientras buscan salvar a la humanidad.</p>
+                </div>
+                <!-- Recuadro 2 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">La Guerra del Silencio</h3>
+                    <p style="color: #ddd;">En una distopía donde el sonido ha sido prohibido, los rebeldes luchan por recuperar lo que una vez fue la voz de la humanidad.</p>
+                </div>
+                <!-- Recuadro 3 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">La Herencia de Fuego</h3>
+                    <p style="color: #ddd;">Un joven aprendiz de mago descubre que tiene el poder ancestral de controlar el fuego, pero también una terrible maldición que podría destruirlo todo.</p>
+                </div>
+                <!-- Recuadro 4 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">El Último Reino</h3>
+                    <p style="color: #ddd;">En un mundo donde los reinos han caído, un héroe olvidado busca recuperar la gloria y restaurar la paz a su tierra natal.</p>
+                </div>
+                <!-- Recuadro 5 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">Sombras de Acero</h3>
+                    <p style="color: #ddd;">Un asesino enmascarado debe decidir entre su lealtad a una organización secreta o su deseo de redención.</p>
+                </div>
+                <!-- Recuadro 6 -->
+                <div class="swiper-slide" style="background-color: #444; border-radius: 10px; padding: 20px;">
+                    <h3 style="text-align: center; color: #d4af37;">La Profecía del Sol</h3>
+                    <p style="color: #ddd;">Una antigua profecía predice la caída del sol y el renacimiento de un nuevo mundo. Un grupo de aventureros debe detener el caos antes de que sea demasiado tarde.</p>
+                </div>
+            </div>
+            <!-- Botones de navegación del carrusel -->
+            <div class="swiper-button-next" style="color: #d4af37;"></div>
+            <div class="swiper-button-prev" style="color: #d4af37;"></div>
+        </div>
+    </div>
+</section>
+<!-- Pie de Página -->
+<footer style="background-color: #222; color: #fff; padding: 40px 0; text-align: center;">
+    <div class="container">
+        <p style="font-size: 1.2rem; color: #d4af37;">ÉterFlor - Flores Eternas y Más</p>
+        <p style="font-size: 1rem; color: #bbb; margin-bottom: 20px;">Transforma tu mundo con nuestras flores y productos únicos. Con el toque de elegancia que mereces.</p>
+        <p style="font-size: 1.2rem; color: #fff;">Para consultas o pedidos, contáctanos al:</p>
+        <p style="font-size: 1.4rem; color: #d4af37; font-weight: bold;">949442473</p>
+        <p style="font-size: 1rem; color: #bbb; margin-top: 20px;">© 2025 ÉterFlor. Todos los derechos reservados.</p>
+    </div>
+</footer>
 
 </body>
 </html>
