--- a/index.html
+++ b/index.html
@@ -108,4 +108,126 @@
   <div class="bubble"></div>
 
 </body>
+  <!-- SECCIÓN DE FLORES -->
+<section id="flores" class="seccion-flores">
+  <h2 class="titulo-seccion">🌸 Flores Eternas 🌸</h2>
+  <div class="carrusel-flores">
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Rosa+Eterna" alt="Rosa Eterna">
+      <h3>Rosa Eterna</h3>
+      <p>Una flor que desafía el tiempo. Elegancia pura en cada pétalo. 💖</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 35</a>
+    </div>
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Tulipán+Soñador" alt="Tulipán Soñador">
+      <h3>Tulipán Soñador</h3>
+      <p>Un susurro de color en cada hoja. Ideal para enamorar. 🌷</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 30</a>
+    </div>
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Orquídea+Cósmica" alt="Orquídea Cósmica">
+      <h3>Orquídea Cósmica</h3>
+      <p>Una flor que parece traída de otro mundo. Misterio y belleza. 🪐</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 45</a>
+    </div>
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Lirio+de+Luz" alt="Lirio de Luz">
+      <h3>Lirio de Luz</h3>
+      <p>Delicadeza en su máxima expresión. Brilla con luz propia. ✨</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 40</a>
+    </div>
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Margarita+Celestial" alt="Margarita Celestial">
+      <h3>Margarita Celestial</h3>
+      <p>Pureza y armonía en cada hoja. Una caricia visual. 🌼</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 28</a>
+    </div>
+    <div class="tarjeta-flor">
+      <img src="https://via.placeholder.com/200x200?text=Flor+de+Cerezo" alt="Flor de Cerezo">
+      <h3>Flor de Cerezo</h3>
+      <p>El símbolo de la belleza efímera, capturado para siempre. 🌸</p>
+      <a href="https://wa.link/55x0dx" target="_blank">S/ 50</a>
+    </div>
+  </div>
+</section>
+<style>
+/* SECCIÓN DE FLORES */
+.seccion-flores {
+  padding: 50px 20px;
+  background-color: #fff0f5;
+  position: relative;
+}
+
+.titulo-seccion {
+  text-align: center;
+  font-size: 2.5rem;
+  background-color: #ffe4ec;
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 25px;
+  color: #b03060;
+  box-shadow: 0 0 15px rgba(255, 192, 203, 0.4);
+}
+
+.carrusel-flores {
+  display: flex;
+  overflow-x: auto;
+  gap: 20px;
+  padding: 10px;
+  scroll-behavior: smooth;
+}
+
+.carrusel-flores::-webkit-scrollbar {
+  display: none;
+}
+
+.tarjeta-flor {
+  flex: 0 0 auto;
+  width: 220px;
+  background-color: #fffafc;
+  border-radius: 20px;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(200, 160, 180, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.tarjeta-flor:hover {
+  transform: scale(1.05);
+}
+
+.tarjeta-flor img {
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+
+.tarjeta-flor h3 {
+  font-size: 1.2rem;
+  color: #d94f8a;
+  margin-bottom: 5px;
+}
+
+.tarjeta-flor p {
+  font-size: 0.95rem;
+  color: #6e3269;
+  margin-bottom: 10px;
+}
+
+.tarjeta-flor a {
+  display: inline-block;
+  background-color: #ffb6c1;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.tarjeta-flor a:hover {
+  background-color: #ff69b4;
+}
+</style>
+
 </html>
